syntax = "proto3";

option go_package = "github.com/ThetaRangers/SDCC/registerServer";

package registerServer;

service Operations {
  rpc Register (RegisterMessage) returns (Cluster) {}
  rpc GetAllNodes(EmptyMessage) returns (NodesIp) {}
}

message RegisterMessage {
    string ip = 1;
    string nodeId = 2;
}

message Cluster {
  repeated string addresses = 1;
  repeated string  nodeIdS = 2;
  bool crashed = 3;
  string bootstrap = 4;
}

message EmptyMessage {}

message NodesIp {
  repeated string addresses = 1;
}
